--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.29"
     },
     "require-dev": {
@@ -73,4 +74,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
